# coreops

./: .env.example  .gitignore  DEPLOY.md  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 17674761bb90_add_job_scheduling.py  1e165d1c28ef_add_current_monitor_status_fields.py  271a70bd9aba_add_scheduling_fields_to_jobs.py  3c8c391355de_add_alert_channel.py  bd481f12a845_add_created_at_to_jobs.py  c0c5ffe4af26_init.py  ec51aa5c7047_initial.py  ffb51566e554_add_job_scheduling.py
app/: main.py
app/api/: deps.py
app/api/routes/: health.py  jobs.py  run.py
app/core/: config.py  security.py
app/db/: base.py  models.py  session.py
app/schemas/: jobs.py  runs.py
app/services/: discord_notifier.py  email_notifier.py  job_runner.py
app/static/: style.css
app/templates/: dashboard.html  login.html  monitor_detail.html  monitor_form.html
app/templates/partials/: _monitor_runs.html  _monitor_status.html  _monitors_table.html  _summary_cards.html
app/web/routes/: auth.py  dashboard.py
app/worker/: celery.py  tasks.py
nginx/: default.conf
