[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreops"
version = "0.1.0"
description = "CoreOps backend"
readme = "README.md"
requires-python = ">=3.11"
[project]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg2-binary",
  "alembic",
  "celery",
  "redis",
  "httpx>=0.27.0"
]

[tool.setuptools]
packages = ["app"]